# Inversiones_mama

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE_V2.md  ARCHITECTURE_V3_LOCAL_SIMULATION.md  CASE_CONTINUOUS_RESEARCH_DAEMON.md  IBKR_SETUP.md  META_PORTFOLIO_AUDIT.md  PHASE4_SKEW_T.md  SCHEDULING.md  TESTING_ROADMAP.md
scripts/: backfill_ibkr_history.py  backfill_yfinance.py  build_meta_website.py  dashboard.py  demo_alpha_pipeline.py  finalize_superwide.py  gather_wide_universe.py  reconcile_alpaca_fills.py  register_scheduled_rebalance.ps1  run_ccar_stress.py  run_cpcv_rigorous.py  run_cpcv_tournament.py  run_ensemble_rebalance.py  run_expanded_verdict.py  run_meta_backtest.py  run_meta_bootstrap.py  run_meta_portfolio.py  run_meta_regime.py  run_paper_rebalance.py  run_v1a_verdict.py  strategy_stats.py  verify_alpaca.py  verify_deploy_ready.py  verify_ibkr_tws.py  verify_universe.py
tests/: conftest.py  test_alpaca.py  test_bootstrap.py  test_cache.py  test_ccar_stress.py  test_circuit_breaker.py  test_config.py  test_costs.py  test_covariance.py  test_cpcv.py  test_dashboard.py  test_delayed_fundamentals.py  test_engine.py  test_exploration.py  test_factor_regression.py  test_factors.py  test_fundamentals.py  test_gates.py  test_hrp.py  test_ibkr_historical.py  test_ibkr_tws.py  test_inverse_vol.py  test_kelly.py  test_liquid_universe.py  test_macro.py  test_metrics.py  test_monte_carlo.py  test_multi_strategy_ledger.py  test_paper_trader.py  test_pdt.py  test_prices.py  test_trade_log.py  test_trade_sequence_mc.py  test_universe.py  test_volume.py
(+59 files in other folders)
